data/intermediate/generated/parser/MDX/mdxParser.py
# Generated from /Users/annaellebaiget/Desktop/MS_Thesis/ExplainFuzz/data/intermediate/grammars/final/MDX/mdxParser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class mdxParser ( Parser ):

    grammarFileName = "mdxParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'''", "'*'", "':'", "';'", "','", "'||'", 
                     "'.'", "'='", "'>='", "'>'", "'{'", "'<='", "'('", 
                     "'<'", "'-'", "'<>'", "'+'", "'}'", "')'", "'/'", "'AND'", 
                     "'AS'", "'CASE'", "'CELL'", "'CELL_ORDINAL'", "'CREATE'", 
                     "'DIMENSION'", "'ELSE'", "'EMPTY'", "'END'", "'FORMATTED_VALUE'", 
                     "'FROM'", "'GLOBAL'", "'MEMBER'", "'NON'", "'NOT'", 
                     "'ON'", "'OR'", "'PROPERTIES'", "'SELECT'", "'SESSION'", 
                     "'SET'", "'THEN'", "'VALUE'", "'WHEN'", "'WHERE'", 
                     "'XOR'", "'WITH'" ]

    symbolicNames = [ "<INVALID>", "QUOTE", "ASTERISK", "COLON", "SEMICOLON", 
                      "COMMA", "CONCAT", "DOT", "EQ", "GE", "GT", "LBRACE", 
                      "LE", "LPAREN", "LT", "MINUS", "NE", "PLUS", "RBRACE", 
                      "RPAREN", "SOLIDUS", "AND", "AS", "CASE", "CELL", 
                      "CELL_ORDINAL", "CREATE", "DIMENSION", "ELSE", "EMPTY", 
                      "END", "FORMATTED_VALUE", "FROM", "GLOBAL", "MEMBER", 
                      "NON", "NOT", "ON", "OR", "PROPERTIES", "SELECT", 
                      "SESSION", "SET", "THEN", "VALUE", "WHEN", "WHERE", 
                      "XOR", "WITH", "NUMBER", "F", "ID", "AMP_QUOTED_ID", 
                      "QUOTED_ID", "STRING", "WS" ]

    RULE_mdx_statement = 0
    RULE_block_0 = 1
    RULE_block_1 = 2
    RULE_select_statement = 3
    RULE_cell_props_question = 4
    RULE_block_1_question = 5
    RULE_axis_specification_list_question = 6
    RULE_block_0_question = 7
    RULE_single_formula_specification_plus = 8
    RULE_block_2 = 9
    RULE_set_specification = 10
    RULE_block_31 = 11
    RULE_block_3 = 12
    RULE_member_property_def_list_question = 13
    RULE_member_specification = 14
    RULE_block_5 = 15
    RULE_axis_specification_list = 16
    RULE_block_5_star = 17
    RULE_block_6 = 18
    RULE_member_property_def_list = 19
    RULE_block_6_star = 20
    RULE_member_property_definition = 21
    RULE_block_7 = 22
    RULE_compound_id = 23
    RULE_block_7_star = 24
    RULE_block_8 = 25
    RULE_axis_specification = 26
    RULE_dim_props_question = 27
    RULE_block_8_question = 28
    RULE_dim_props = 29
    RULE_dimension_question = 30
    RULE_block_9 = 31
    RULE_property_list = 32
    RULE_block_9_star = 33
    RULE_cell_props = 34
    RULE_cell_question = 35
    RULE_block_10 = 36
    RULE_cell_property_list = 37
    RULE_block_10_star = 38
    RULE_mandatory_cell_property = 39
    RULE_block_11 = 40
    RULE_expression = 41
    RULE_block_11_star = 42
    RULE_value_expression = 43
    RULE_block_12_star = 44
    RULE_value_xor_expression = 45
    RULE_value_or_expression = 46
    RULE_block_13 = 47
    RULE_term5 = 48
    RULE_block_13_star = 49
    RULE_term4 = 50
    RULE_block_14 = 51
    RULE_term3 = 52
    RULE_block_14_star = 53
    RULE_block_32 = 54
    RULE_block_15 = 55
    RULE_term2 = 56
    RULE_block_15_star = 57
    RULE_block_33 = 58
    RULE_block_17 = 59
    RULE_term = 60
    RULE_block_17_star = 61
    RULE_factor = 62
    RULE_function_ = 63
    RULE_block_19_question = 64
    RULE_block_20 = 65
    RULE_value_expression_primary = 66
    RULE_block_20_star = 67
    RULE_block_22 = 68
    RULE_block_23 = 69
    RULE_block_35_question = 70
    RULE_value_expression_primary0 = 71
    RULE_block_25 = 72
    RULE_exp_list = 73
    RULE_block_25_star = 74
    RULE_block_28 = 75
    RULE_case_expression = 76
    RULE_block_28_question = 77
    RULE_block_27_question = 78
    RULE_block_26_question = 79
    RULE_when_list = 80
    RULE_block_29_star = 81
    RULE_when_clause = 82
    RULE_comp_op = 83
    RULE_unquoted_identifier = 84
    RULE_amp_quoted_identifier = 85
    RULE_quoted_identifier = 86
    RULE_keyword = 87
    RULE_formula_specification = 88
    RULE_single_formula_specification = 89
    RULE_member_name = 90
    RULE_set_name = 91
    RULE_property_ = 92
    RULE_cube_name = 93
    RULE_slicer_specification = 94
    RULE_cell_property = 95
    RULE_block_12 = 96
    RULE_block_19 = 97
    RULE_block_34 = 98
    RULE_block_35 = 99
    RULE_block_26 = 100
    RULE_block_27 = 101
    RULE_block_29 = 102
    RULE_block_30 = 103
    RULE_cube_specification = 104
    RULE_identifier = 105
    RULE_axis_name = 106
    RULE_provider_specific_cell_property = 107

    ruleNames =  [ "mdx_statement", "block_0", "block_1", "select_statement", 
                   "cell_props_question", "block_1_question", "axis_specification_list_question", 
                   "block_0_question", "single_formula_specification_plus", 
                   "block_2", "set_specification", "block_31", "block_3", 
                   "member_property_def_list_question", "member_specification", 
                   "block_5", "axis_specification_list", "block_5_star", 
                   "block_6", "member_property_def_list", "block_6_star", 
                   "member_property_definition", "block_7", "compound_id", 
                   "block_7_star", "block_8", "axis_specification", "dim_props_question", 
                   "block_8_question", "dim_props", "dimension_question", 
                   "block_9", "property_list", "block_9_star", "cell_props", 
                   "cell_question", "block_10", "cell_property_list", "block_10_star", 
                   "mandatory_cell_property", "block_11", "expression", 
                   "block_11_star", "value_expression", "block_12_star", 
                   "value_xor_expression", "value_or_expression", "block_13", 
                   "term5", "block_13_star", "term4", "block_14", "term3", 
                   "block_14_star", "block_32", "block_15", "term2", "block_15_star", 
                   "block_33", "block_17", "term", "block_17_star", "factor", 
                   "function_", "block_19_question", "block_20", "value_expression_primary", 
                   "block_20_star", "block_22", "block_23", "block_35_question", 
                   "value_expression_primary0", "block_25", "exp_list", 
                   "block_25_star", "block_28", "case_expression", "block_28_question", 
                   "block_27_question", "block_26_question", "when_list", 
                   "block_29_star", "when_clause", "comp_op", "unquoted_identifier", 
                   "amp_quoted_identifier", "quoted_identifier", "keyword", 
                   "formula_specification", "single_formula_specification", 
                   "member_name", "set_name", "property_", "cube_name", 
                   "slicer_specification", "cell_property", "block_12", 
                   "block_19", "block_34", "block_35", "block_26", "block_27", 
                   "block_29", "block_30", "cube_specification", "identifier", 
                   "axis_name", "provider_specific_cell_property" ]

    EOF = Token.EOF
    QUOTE=1
    ASTERISK=2
    COLON=3
    SEMICOLON=4
    COMMA=5
    CONCAT=6
    DOT=7
    EQ=8
    GE=9
    GT=10
    LBRACE=11
    LE=12
    LPAREN=13
    LT=14
    MINUS=15
    NE=16
    PLUS=17
    RBRACE=18
    RPAREN=19
    SOLIDUS=20
    AND=21
    AS=22
    CASE=23
    CELL=24
    CELL_ORDINAL=25
    CREATE=26
    DIMENSION=27
    ELSE=28
    EMPTY=29
    END=30
    FORMATTED_VALUE=31
    FROM=32
    GLOBAL=33
    MEMBER=34
    NON=35
    NOT=36
    ON=37
    OR=38
    PROPERTIES=39
    SELECT=40
    SESSION=41
    SET=42
    THEN=43
    VALUE=44
    WHEN=45
    WHERE=46
    XOR=47
    WITH=48
    NUMBER=49
    F=50
    ID=51
    AMP_QUOTED_ID=52
    QUOTED_ID=53
    STRING=54
    WS=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Mdx_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_statement(self):
            return self.getTypedRuleContext(mdxParser.Select_statementContext,0)


        def EOF(self):
            return self.getToken(mdxParser.EOF, 0)

        def getRuleIndex(self):
            return mdxParser.RULE_mdx_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMdx_statement" ):
                listener.enterMdx_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMdx_statement" ):
                listener.exitMdx_statement(self)




    def mdx_statement(self):

        localctx = mdxParser.Mdx_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mdx_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 216
            self.select_statement()
            self.state = 217
            self.match(mdxParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WITH(self):
            return self.getToken(mdxParser.WITH, 0)

        def formula_specification(self):
            return self.getTypedRuleContext(mdxParser.Formula_specificationContext,0)


        def getRuleIndex(self):
            return mdxParser.RULE_block_0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_0" ):
                listener.enterBlock_0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_0" ):
                listener.exitBlock_0(self)




    def block_0(self):

        localctx = mdxParser.Block_0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block_0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 219
            self.match(mdxParser.WITH)
            self.state = 220
            self.formula_specification()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(mdxParser.WHERE, 0)

        def slicer_specification(self):
            return self.getTypedRuleContext(mdxParser.Slicer_specificationContext,0)


        def getRuleIndex(self):
            return mdxParser.RULE_block_1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_1" ):
                listener.enterBlock_1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_1" ):
                listener.exitBlock_1(self)




    def block_1(self):

        localctx = mdxParser.Block_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block_1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 222
            self.match(mdxParser.WHERE)
            self.state = 223
            self.slicer_specification()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_0_question(self):
            return self.getTypedRuleContext(mdxParser.Block_0_questionContext,0)


        def SELECT(self):
            return self.getToken(mdxParser.SELECT, 0)

        def axis_specification_list_question(self):
            return self.getTypedRuleContext(mdxParser.Axis_specification_list_questionContext,0)


        def FROM(self):
            return self.getToken(mdxParser.FROM, 0)

        def cube_specification(self):
            return self.getTypedRuleContext(mdxParser.Cube_specificationContext,0)


        def block_1_question(self):
            return self.getTypedRuleContext(mdxParser.Block_1_questionContext,0)


        def cell_props_question(self):
            return self.getTypedRuleContext(mdxParser.Cell_props_questionContext,0)


        def getRuleIndex(self):
            return mdxParser.RULE_select_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_statement" ):
                listener.enterSelect_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_statement" ):
                listener.exitSelect_statement(self)




    def select_statement(self):

        localctx = mdxParser.Select_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_select_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 225
            self.block_0_question()
            self.state = 226
            self.match(mdxParser.SELECT)
            self.state = 227
            self.axis_specification_list_question()
            self.state = 228
            self.match(mdxParser.FROM)
            self.state = 229
            self.cube_specification()
            self.state = 230
            self.block_1_question()
            self.state = 231
            self.cell_props_question()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cell_props_questionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cell_question(self):
            return self.getTypedRuleContext(mdxParser.Cell_questionContext,0)


        def PROPERTIES(self):
            return self.getToken(mdxParser.PROPERTIES, 0)

        def cell_property_list(self):
            return self.getTypedRuleContext(mdxParser.Cell_property_listContext,0)


        def getRuleIndex(self):
            return mdxParser.RULE_cell_props_question

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCell_props_question" ):
                listener.enterCell_props_question(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCell_props_question" ):
                listener.exitCell_props_question(self)




    def cell_props_question(self):

        localctx = mdxParser.Cell_props_questionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cell_props_question)
        try:
            self.state = 238
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [-1]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [24, 39]:
                self.enterOuterAlt(localctx, 2)
                self.state = 234
                self.cell_question()
                self.state = 235
                self.match(mdxParser.PROPERTIES)
                self.state = 236
                self.cell_property_list()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_1_questionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(mdxParser.WHERE, 0)

        def slicer_specification(self):
            return self.getTypedRuleContext(mdxParser.Slicer_specificationContext,0)


        def getRuleIndex(self):
            return mdxParser.RULE_block_1_question

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_1_question" ):
                listener.enterBlock_1_question(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_1_question" ):
                listener.exitBlock_1_question(self)




    def block_1_question(self):

        localctx = mdxParser.Block_1_questionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block_1_question)
        try:
            self.state = 243
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [-1, 24, 39]:
                self.enterOuterAlt(localctx, 1)
